--- a/src/main/resources/com/example/FACT/login.fxml
+++ b/src/main/resources/com/example/FACT/login.fxml
@@ -19,7 +19,7 @@
          <top>
             <AnchorPane BorderPane.alignment="CENTER">
                <children>
-                  <ImageView fx:id="brandingImageView" fitHeight="200.0" fitWidth="700.0" layoutX="282.0" layoutY="6.0" pickOnBounds="true">
+                  <ImageView fx:id="brandingImageView" fitHeight="200.0" fitWidth="700.0" layoutX="253.0" layoutY="8.0" pickOnBounds="true">
                      <viewport>
                         <Rectangle2D />
                      </viewport>
@@ -53,12 +53,12 @@
                      <font>
                         <Font size="25.0" />
                      </font></PasswordField>
-                  <Button fx:id="loginButton" layoutX="395.0" layoutY="354.0" mnemonicParsing="false" onAction="#loginButtonOnAction" prefHeight="60.0" prefWidth="400.0" style="-fx-background-color: #2E40F5;" text="LOG IN" textFill="WHITE">
+                  <Button fx:id="loginButton" layoutX="395.0" layoutY="354.0" mnemonicParsing="false" onAction="#loginButtonOnAction" prefHeight="60.0" prefWidth="400.0" style="-fx-background-color: #3578C9;" text="LOG IN" textFill="WHITE">
                      <font>
                         <Font name="Helvetica Bold" size="30.0" />
                      </font>
                   </Button>
-                  <Button fx:id="signButton" layoutX="398.0" layoutY="456.0" mnemonicParsing="false" onAction="#signButtonOnAction" prefHeight="60.0" prefWidth="400.0" style="-fx-background-color: #2E40F5;" text="SIGN UP" textFill="WHITE">
+                  <Button fx:id="signButton" layoutX="398.0" layoutY="456.0" mnemonicParsing="false" onAction="#signButtonOnAction" prefHeight="60.0" prefWidth="400.0" style="-fx-background-color: #3578C9;" text="SIGN UP" textFill="WHITE">
                      <font>
                         <Font name="Helvetica Bold" size="30.0" />
                      </font>
