--- a/src/main/resources/com/example/FACT/setGameplay.fxml
+++ b/src/main/resources/com/example/FACT/setGameplay.fxml
@@ -1,105 +1,104 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 <!-- When UI loads, the FXML is linked to the GamePlay Controller -->
 
+<BorderPane fx:id="root" prefHeight="553.0" prefWidth="880.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.FACT.controller.GameplayController">
 
-<AnchorPane xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.FACT.controller.GameplayController">
-   <children>
-      <BorderPane fx:id="root" prefHeight="560" prefWidth="880">
-      
-          <!-- TOP = this holds the image of the application course, and the title. -->
-          <top>
-            <BorderPane prefHeight="57.0" prefWidth="880.0" style="-fx-background-color: lightgray;" BorderPane.alignment="CENTER">
-               <left>
-                  <Group BorderPane.alignment="CENTER">
-                     <children>
-                           <!-- APPLICATION IMAGE -->
-                           <ImageView fx:id="logoImageView" fitHeight="28" pickOnBounds="true" preserveRatio="true">
-                               <image>
-                              <Image url="@VS_code_logo.png" />
-                           </image>
-                           </ImageView>
-                        <Pane layoutX="28.0" prefHeight="28.0" prefWidth="22.0" />
-                           <!-- APPLICATION TITLE -->
-                           <Label fx:id="appTitleLabel" layoutX="50.0" prefHeight="23.0" prefWidth="125.0" style="-fx-font-size: 18px; -fx-font-weight: bold;" text="VS Studio Code" />
-                     </children>
-                     <BorderPane.margin>
-                        <Insets left="20.0" top="5.0" />
-                     </BorderPane.margin>
-                  </Group>
-               </left>
-               <right>
-                  <Button alignment="CENTER_RIGHT" mnemonicParsing="false" text="Exit" BorderPane.alignment="CENTER">
-                     <BorderPane.margin>
-                        <Insets right="20.0" />
-                     </BorderPane.margin>
-                  </Button>
-               </right>
-            </BorderPane>
-          </top>
-      
-          <!-- This holds the description of the shortcut and shortcut buttons required. -->
-          <center>
-              <VBox alignment="TOP_CENTER">
-                  <padding>
-                  <Insets top="50" />
-               </padding>
-                  <GridPane hgap="16" maxWidth="820" vgap="10">
-                      <columnConstraints>
-                          <ColumnConstraints hgrow="ALWAYS" percentWidth="100" />
-                      </columnConstraints>
-      
-                      <VBox alignment="CENTER" minHeight="-Infinity" prefHeight="216.0" prefWidth="820.0" spacing="10" GridPane.columnIndex="0">
-                          <!-- KEYS TO PRESS -->
-                          <Label prefHeight="72.0" prefWidth="79.0" style="-fx-font-size: 14px; -fx-font-weight: bold;" text="Keys to Press" />
-                          <FlowPane fx:id="keysPane" alignment="CENTER" columnHalignment="CENTER" hgap="8" vgap="8">
-                              <Label style="-fx-padding: 8 12; -fx-background-color: #e9edf3; -fx-background-radius: 6; -fx-font-weight: bold;" text="⌘" />
-                              <Label style="-fx-padding: 8 12; -fx-background-color: #e9edf3; -fx-background-radius: 6; -fx-font-weight: bold;" text="⇧" />
-                              <Label style="-fx-padding: 8 12; -fx-background-color: #e9edf3; -fx-background-radius: 6; -fx-font-weight: bold;" text="S" />
-                          </FlowPane>
-                     <Pane minHeight="-Infinity" prefHeight="51.0" prefWidth="820.0" />
-                          <!-- SHORTCUT DESCRIPTION-->
-                          <Text fx:id="shortcutDescText" text="Brief description of what this shortcut does and when to use it." textAlignment="CENTER" wrappingWidth="380" />
-                      </VBox>
-                      <rowConstraints>
-                          <RowConstraints />
-                      </rowConstraints>
-                  </GridPane>
-              </VBox>
-          </center>
-         <bottom>
-            <BorderPane prefHeight="69.0" prefWidth="880.0" BorderPane.alignment="CENTER">
-               <right>
-                  <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" prefHeight="17.0" prefWidth="52.0" text="Progress" textAlignment="RIGHT" BorderPane.alignment="CENTER" />
-               </right>
-               <center>
-                   <Label fx:id="statusLabel" alignment="CENTER" contentDisplay="CENTER" graphicTextGap="0.0" prefHeight="20.0" prefWidth="362.0" style="-fx-font-size: 16px;" textAlignment="CENTER" BorderPane.alignment="CENTER">
-                     <padding>
-                        <Insets left="10.0" />
-                     </padding>
-                  </Label>
-               </center>
-               <padding>
-                  <Insets right="20.0" />
-               </padding>
-            </BorderPane>
-         </bottom>
+    <!-- This holds the description of the shortcut and shortcut buttons required. -->
+    <center>
+        <VBox alignment="TOP_CENTER">
+            <padding>
+            <Insets top="50" />
+         </padding>
+            <GridPane hgap="16" vgap="10">
+                <columnConstraints>
+                    <ColumnConstraints hgrow="ALWAYS" percentWidth="100" />
+                </columnConstraints>
+
+                <VBox alignment="CENTER" minHeight="-Infinity" prefHeight="216.0" prefWidth="820.0" spacing="12.0" GridPane.columnIndex="0">
+                    <!-- KEYS TO PRESS -->
+                    <Label prefHeight="51.0" prefWidth="222.0" style="-fx-font-size: 20; -fx-font-weight: bold; -fx-alignment: CENTER;" text="Keys to Press">
+                  <font>
+                     <Font size="22.0" />
+                  </font></Label>
+                    <FlowPane fx:id="keysPane" alignment="CENTER" columnHalignment="CENTER" hgap="8" vgap="8">
+                        <Label prefWidth="36.0" style="-fx-padding: 8 12; -fx-background-color: #e9edf3; -fx-background-radius: 6; -fx-font-weight: bold;" text="⌘" />
+                        <Label style="-fx-padding: 8 12; -fx-background-color: #e9edf3; -fx-background-radius: 6; -fx-font-weight: bold;" text="⇧" />
+                        <Label style="-fx-padding: 8 12; -fx-background-color: #e9edf3; -fx-background-radius: 6; -fx-font-weight: bold;" text="S" />
+                    </FlowPane>
+                    <!-- SHORTCUT DESCRIPTION-->
+                    <Text fx:id="shortcutDescText" text="Brief description of what this shortcut does and when to use it." textAlignment="CENTER" wrappingWidth="700.0">
+                  <font>
+                     <Font size="17.0" />
+                  </font></Text>
+                </VBox>
+                <rowConstraints>
+                    <RowConstraints />
+                </rowConstraints>
+            </GridPane>
+        </VBox>
+    </center>
+   <bottom>
+      <BorderPane prefHeight="69.0" prefWidth="880.0" BorderPane.alignment="CENTER">
+         <right>
+            <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" prefHeight="17.0" prefWidth="52.0" text="Progress" textAlignment="RIGHT" BorderPane.alignment="CENTER_RIGHT" />
+         </right>
+         <center>
+             <Label fx:id="statusLabel" alignment="CENTER" contentDisplay="CENTER" graphicTextGap="0.0" prefHeight="20.0" prefWidth="367.0" style="-fx-font-size: 16px;" BorderPane.alignment="CENTER">
+               <BorderPane.margin>
+                  <Insets left="20.0" />
+               </BorderPane.margin>
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Label>
+         </center>
+         <padding>
+            <Insets bottom="8.0" left="16.0" right="16.0" top="8.0" />
+         </padding>
       </BorderPane>
-   </children>
-</AnchorPane>
+   </bottom>
+   <top>
+      <HBox alignment="CENTER" prefHeight="52.0" prefWidth="880.0" style="-fx-background-color: lightgray;" BorderPane.alignment="CENTER">
+         <children>
+               <!-- APPLICATION IMAGE -->
+               <ImageView fx:id="logoImageView" fitHeight="28" pickOnBounds="true" preserveRatio="true">
+                   <image>
+                  <Image url="@VS_code_logo.png" />
+               </image>
+               <HBox.margin>
+                  <Insets left="10.0" />
+               </HBox.margin>
+               </ImageView>
+               <!-- APPLICATION TITLE -->
+               <Label fx:id="appTitleLabel" prefHeight="33.0" prefWidth="183.0" style="-fx-font-size: 18px; -fx-font-weight: bold;" text="VS Studio Code">
+               <padding>
+                  <Insets left="10.0" />
+               </padding>
+            </Label>
+            <Region prefHeight="38.0" prefWidth="503.0" HBox.hgrow="ALWAYS" />
+            <Button mnemonicParsing="false" text="Exit">
+               <HBox.margin>
+                  <Insets right="10.0" />
+               </HBox.margin>
+            </Button>
+         </children>
+      </HBox>
+   </top>
+</BorderPane>
