--- a/src/main/resources/com/example/FACT/createSet.fxml
+++ b/src/main/resources/com/example/FACT/createSet.fxml
@@ -32,16 +32,12 @@
   OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<VBox alignment="CENTER" spacing="20.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.FACT.controller.CreateSetController">
+<VBox alignment="CENTER" spacing="20.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.FACT.controller.CreateSetController">
    <children>
       <BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
          <top>
@@ -54,36 +50,41 @@
          <bottom>
             <AnchorPane prefHeight="615.0" prefWidth="1204.0" BorderPane.alignment="CENTER">
                <children>
-                  <TextField fx:id="ApplicationTextField" layoutX="364.0" layoutY="85.0" minHeight="60.0" minWidth="400.0" prefHeight="60.0" prefWidth="400.0" promptText="Application">
-                     <font>
-                        <Font size="25.0" />
-                     </font>
-                  </TextField>
-                  <Button fx:id="SaveButton" layoutX="501.0" layoutY="480.0" mnemonicParsing="false"  prefHeight="60.0" prefWidth="141.0" style="-fx-background-color: #2E40F5;" text="Save" textFill="WHITE">
+                  <ComboBox fx:id="ApplicationComboBox" layoutX="364.0" layoutY="85.0" minHeight="60.0" minWidth="400.0" prefHeight="60.0" prefWidth="400.0" promptText="Select Application">
+                  </ComboBox>
+
+                  <Button fx:id="SaveButton" layoutX="501.0" layoutY="480.0" mnemonicParsing="false" onAction="#CreateSetAction" prefHeight="60.0" prefWidth="141.0" style="-fx-background-color:  #22C55E;" text="Save" textFill="WHITE">
                      <font>
                         <Font name="Helvetica Bold" size="30.0" />
                      </font>
                   </Button>
-                  <Button fx:id="CancelButton" cancelButton="true" layoutX="295.0" layoutY="479.0" mnemonicParsing="false"  prefHeight="60.0" prefWidth="145.0" style="-fx-background-color: #2E40F5;" text="Cancel" textFill="WHITE">
+                  <Button fx:id="CancelButton" cancelButton="true" layoutX="295.0" layoutY="479.0" onAction="#ClearForm" mnemonicParsing="false" prefHeight="60.0" prefWidth="145.0" style="-fx-background-color: #EF4444;" text="Cancel" textFill="WHITE">
                      <font>
                         <Font name="Helvetica Bold" size="30.0" />
                      </font>
                   </Button>
-                  <Button fx:id="AddAnotherButton" layoutX="688.0" layoutY="480.0" mnemonicParsing="false"  prefHeight="60.0" prefWidth="149.0" style="-fx-background-color: #2E40F5;" text="Add Another" textFill="WHITE">
+                  <Button fx:id="EditSetsButton" layoutX="688.0" layoutY="480.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="149.0" style="-fx-background-color: #2E40F5;" text="Edit Set" textFill="WHITE">
                      <font>
                         <Font name="Helvetica Bold" size="30.0" />
                      </font>
                   </Button>
+                  <Label fx:id="CreateMessageLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="2.0" layoutY="554.0" prefWidth="1200.0">
+                     <font>
+                        <Font name="Helvetica Neue Bold" size="36.0" />
+                     </font>
+                  </Label>
                   <TextField fx:id="CategoryTextField" layoutX="365.0" layoutY="159.0" minHeight="60.0" minWidth="400.0" prefHeight="60.0" prefWidth="400.0" promptText="Category">
                      <font>
                         <Font size="25.0" />
                      </font>
                   </TextField>
-                  <TextField fx:id="DifficultyTextField" layoutX="367.0" layoutY="237.0" minHeight="60.0" minWidth="400.0" prefHeight="60.0" prefWidth="400.0" promptText="Difficulty">
-                     <font>
-                        <Font size="25.0" />
-                     </font>
-                  </TextField>
+                  <ComboBox fx:id="DifficultyComboBox"
+                            layoutX="367.0" layoutY="237.0"
+                            minHeight="60.0" minWidth="400.0"
+                            prefHeight="60.0" prefWidth="400.0"
+                            promptText="Select difficulty">
+                  </ComboBox>
+
                   <TextField fx:id="DescriptionTextField" layoutX="368.0" layoutY="311.0" minHeight="60.0" minWidth="400.0" prefHeight="60.0" prefWidth="400.0" promptText="Description">
                      <font>
                         <Font size="25.0" />
@@ -94,6 +95,11 @@
                         <Font size="25.0" />
                      </font>
                   </TextField>
+                  <Text layoutX="487.0" layoutY="68.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Craete New Set" wrappingWidth="168.5390625">
+                     <font>
+                        <Font size="24.0" />
+                     </font>
+                  </Text>
                </children>
             </AnchorPane>
          </bottom>
