Added Exit button logic. Currently goes back to login page, but will go back to homepage once finished.

--- a/src/main/resources/com/example/FACT/setGameplay.fxml
+++ b/src/main/resources/com/example/FACT/setGameplay.fxml
@@ -93,7 +93,7 @@
                </padding>
             </Label>
             <Region prefHeight="38.0" prefWidth="503.0" HBox.hgrow="ALWAYS" />
-            <Button mnemonicParsing="false" text="Exit">
+            <Button fx:id="exit" mnemonicParsing="false" onAction="#exitGameplay" text="Exit">
                <HBox.margin>
                   <Insets right="10.0" />
                </HBox.margin>
