--- a/src/main/resources/com/example/FACT/homebase.fxml
+++ b/src/main/resources/com/example/FACT/homebase.fxml
@@ -3,7 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.effect.Blend?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -12,11 +11,11 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.FACT.controller.BaseController">
+<AnchorPane prefHeight="156.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.FACT.controller.BaseController">
    <children>
       <VBox alignment="CENTER" spacing="20.0" style="-fx-background-color: ffffffff;">
          <children>
-            <BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
+            <BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="80.0" prefWidth="490.0">
                <top>
                   <AnchorPane BorderPane.alignment="CENTER">
                      <children>
@@ -34,7 +33,7 @@
                               <Blend />
                            </effect>
                         </Button>
-                        <Button fx:id="minimizeButton" contentDisplay="CENTER" ellipsisString="" layoutX="10.0" layoutY="10.0" onAction="#minimizeButtonAction" mnemonicParsing="false"  prefHeight="32.0" prefWidth="33.0" style="-fx-background-color: white; -fx-border-color: #3578C9; -fx-border-width: 3; -fx-border-radius: 7;" text="—" textAlignment="CENTER" textFill="#3578c9" AnchorPane.leftAnchor="-10.0" AnchorPane.topAnchor="-10.0">
+                        <Button fx:id="minimizeButton" contentDisplay="CENTER" ellipsisString="" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#minimizeButtonAction" prefHeight="32.0" prefWidth="33.0" style="-fx-background-color: white; -fx-border-color: #3578C9; -fx-border-width: 3; -fx-border-radius: 7;" text="—" textAlignment="CENTER" textFill="#3578c9" AnchorPane.leftAnchor="-10.0" AnchorPane.topAnchor="-10.0">
                            <font>
                               <Font name="Helvetica Bold" size="10.0" />
                            </font>
@@ -49,27 +48,8 @@
                   </AnchorPane>
                </top>
                <padding>
-                  <Insets bottom="100.0" left="125.0" right="125.0" top="100.0" />
+                  <Insets left="125.0" right="125.0" top="100.0" />
                </padding>
-               <center>
-                  <AnchorPane BorderPane.alignment="CENTER">
-                     <children>
-                        <Label alignment="CENTER" contentDisplay="CENTER" layoutX="2.0" layoutY="447.0" prefHeight="150.0" prefWidth="1200.0">
-                           <font>
-                              <Font name="Helvetica Neue Bold" size="36.0" />
-                           </font>
-                        </Label>
-                        <Label alignment="CENTER" contentDisplay="CENTER" layoutX="12.0" layoutY="457.0" prefWidth="1200.0">
-                           <font>
-                              <Font name="Helvetica Neue Bold" size="36.0" />
-                           </font>
-                        </Label>
-                     </children>
-                     <padding>
-                        <Insets bottom="25.0" />
-                     </padding>
-                  </AnchorPane>
-               </center>
             </BorderPane>
          </children>
       </VBox>
