--- a/src/main/resources/com/example/FACT/EditSetView.fxml
+++ b/src/main/resources/com/example/FACT/EditSetView.fxml
@@ -1,19 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<VBox alignment="CENTER" spacing="20.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.FACT.controller.EditSetController">
+<VBox alignment="CENTER" spacing="20.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.FACT.controller.EditSetController">
    <children>
       <BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
          <top>
@@ -81,7 +73,7 @@
                      </font>
                   </Button>
 
-                  <Button layoutX="788.0" layoutY="530.0" mnemonicParsing="false" onAction="#onClose" prefHeight="60.0" prefWidth="214.0" style="-fx-background-color: #EF4444;" text="Cancel" textFill="WHITE">
+                  <Button fx:id="CreateSetButton" layoutX="788.0" layoutY="530.0" mnemonicParsing="false" onAction="#onClose" prefHeight="60.0" prefWidth="214.0" style="-fx-background-color: #2E40F5;" text="Create Set" textFill="WHITE">
                      <font>
                         <Font name="Helvetica Bold" size="24.0" />
                      </font>
