--- a/src/main/resources/com/example/FACT/createSet.fxml
+++ b/src/main/resources/com/example/FACT/createSet.fxml
@@ -39,6 +39,7 @@
 
 <VBox alignment="CENTER" spacing="20.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.FACT.controller.CreateSetController">
    <children>
+      <fx:include source="homebase.fxml" />
       <BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
          <top>
             <AnchorPane BorderPane.alignment="CENTER">
