--- a/src/main/resources/com/example/FACT/gameplay.fxml
+++ b/src/main/resources/com/example/FACT/gameplay.fxml
@@ -3,101 +3,68 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.FlowPane?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Region?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<!-- When UI loads, the FXML is linked to the GamePlay Controller -->
-<VBox alignment="CENTER" spacing="20.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.FACT.controller.GameplayController">
-<children>
-    <BorderPane fx:id="root" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" >
-    <!-- This holds the description of the shortcut and shortcut buttons required. -->
-    <center>
-        <VBox alignment="TOP_CENTER">
-            <GridPane hgap="16" vgap="10">
-                <columnConstraints>
-                    <ColumnConstraints hgrow="ALWAYS" percentWidth="100" />
-                </columnConstraints>
-
-                <VBox alignment="CENTER" minHeight="-Infinity" prefHeight="216.0" prefWidth="820.0" spacing="12.0" GridPane.columnIndex="0">
-                    <!-- KEYS TO PRESS -->
-                    <Label prefHeight="51.0" prefWidth="222.0" style="-fx-font-size: 20; -fx-font-weight: bold; -fx-alignment: CENTER;" text="Keys to Press">
-                  <font>
-                     <Font size="22.0" />
-                  </font></Label>
-                    <FlowPane fx:id="keysPane" alignment="CENTER" columnHalignment="CENTER" hgap="8" vgap="8">
-                        <Label prefWidth="36.0" style="-fx-padding: 8 12; -fx-background-color: #e9edf3; -fx-background-radius: 6; -fx-font-weight: bold;"/>
-                        <Label style="-fx-padding: 8 12; -fx-background-color: #e9edf3; -fx-background-radius: 6; -fx-font-weight: bold;"/>
-                        <Label style="-fx-padding: 8 12; -fx-background-color: #e9edf3; -fx-background-radius: 6; -fx-font-weight: bold;"/>
-                    </FlowPane>
-                    <!-- SHORTCUT DESCRIPTION-->
-                    <Text fx:id="shortcutDescText" text="Brief description of what this shortcut does and when to use it." textAlignment="CENTER" wrappingWidth="700.0">
-                  <font>
-                     <Font size="17.0" />
-                  </font></Text>
-                </VBox>
-                <rowConstraints>
-                    <RowConstraints />
-                </rowConstraints>
-            </GridPane>
-        </VBox>
-    </center>
-   <bottom>
-      <BorderPane prefHeight="69.0"  BorderPane.alignment="CENTER">
-         <right>
-            <Label fx:id="progress" alignment="CENTER_RIGHT" contentDisplay="RIGHT" prefHeight="17.0" prefWidth="52.0" textAlignment="RIGHT" BorderPane.alignment="CENTER_RIGHT" />
-         </right>
-         <center>
-             <Label fx:id="statusLabel" alignment="CENTER" contentDisplay="CENTER" graphicTextGap="0.0" prefHeight="20.0" prefWidth="367.0" style="-fx-font-size: 16px;" BorderPane.alignment="CENTER">
-               <BorderPane.margin>
-                  <Insets left="20.0" />
-               </BorderPane.margin>
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </Label>
-         </center>
+<VBox alignment="TOP_CENTER" spacing="20.0" style="-fx-background-color: #fff;" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.FACT.controller.HomePageController">
+    <children>
+      <BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
          <padding>
-            <Insets bottom="8.0" left="16.0" right="16.0" top="8.0" />
+            <Insets bottom="100.0" left="125.0" right="125.0" top="100.0" />
          </padding>
+         <top>
+            <AnchorPane BorderPane.alignment="TOP_CENTER">
+               <children>
+                    <Label layoutX="310.0" layoutY="97.0" text="Keys to Press" AnchorPane.leftAnchor="310.0" AnchorPane.topAnchor="97.0">
+                        <font>
+                            <Font name="Helvetica Neue Bold" size="96.0" />
+                        </font>
+                    </Label>
+                  <Label fx:id="registerMessageLabel" alignment="CENTER" contentDisplay="CENTER" prefWidth="1200.0">
+                     <font>
+                        <Font name="Helvetica Neue Bold" size="36.0" />
+                     </font>
+                  </Label>
+                    <Button layoutX="432.0" layoutY="589.0" onAction="#onLogout" prefHeight="60.0" prefWidth="350.0" style="-fx-background-color: ffffff;" text="LOGOUT" textFill="WHITE">
+                        <font>
+                            <Font name="Helvetica Bold" size="30.0" />
+                        </font>
+                    </Button>
+                  <FlowPane fx:id="keysPane" alignment="CENTER" columnHalignment="CENTER" hgap="30.0" layoutX="405.0" layoutY="268.0" vgap="30.0">
+                     <children>
+                        <Label minHeight="70.0" minWidth="70.0" style="-fx-padding: 8 12; -fx-background-color: #e9edf3; -fx-background-radius: 6; -fx-font-weight: bold;" />
+                        <Label minHeight="70.0" minWidth="70.0" style="-fx-padding: 8 12; -fx-background-color: #e9edf3; -fx-background-radius: 6; -fx-font-weight: bold;" />
+                        <Label minHeight="70.0" minWidth="70.0" style="-fx-padding: 8 12; -fx-background-color: #e9edf3; -fx-background-radius: 6; -fx-font-weight: bold;" />
+                     </children>
+                  </FlowPane>
+                  <Text fx:id="shortcutDescText" layoutX="97.0" layoutY="410.0" text="Brief description of what this shortcut does and when to use it." textAlignment="CENTER" wrappingWidth="1067.538818359375">
+                     <font>
+                        <Font name="Helvetica" size="36.0" />
+                     </font>
+                  </Text>
+               </children>
+            </AnchorPane>
+         </top>
+         <bottom>
+            <AnchorPane BorderPane.alignment="CENTER">
+               <children>
+                  <Label fx:id="statusLabel" alignment="CENTER" contentDisplay="CENTER" graphicTextGap="0.0" layoutX="500.0">
+                     <font>
+                        <Font name="Helvetica" size="36.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="progress" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1145.0" layoutY="2.0" prefHeight="17.0" prefWidth="52.0" textAlignment="RIGHT">
+                     <font>
+                        <Font name="Helvetica" size="24.0" />
+                     </font>
+                  </Label>
+               </children>
+            </AnchorPane>
+         </bottom>
       </BorderPane>
-   </bottom>
-   <top>
-      <HBox alignment="CENTER" prefHeight="52.0" prefWidth="880.0" style="-fx-background-color: lightgray;" BorderPane.alignment="CENTER">
-         <children>
-               <!-- APPLICATION IMAGE -->
-               <ImageView fx:id="logoImageView" fitHeight="28" pickOnBounds="true" preserveRatio="true">
-                   <image>
-                  <Image url="@VS_code_logo.png" />
-               </image>
-               <HBox.margin>
-                  <Insets left="10.0" />
-               </HBox.margin>
-               </ImageView>
-               <!-- APPLICATION TITLE -->
-               <Label fx:id="appTitleLabel" prefHeight="33.0" prefWidth="183.0" style="-fx-font-size: 18px; -fx-font-weight: bold;" text="VS Studio Code">
-               <padding>
-                  <Insets left="10.0" />
-               </padding>
-            </Label>
-            <Region prefHeight="38.0" prefWidth="503.0" HBox.hgrow="ALWAYS" />
-            <Button fx:id="exit" mnemonicParsing="false" onAction="#exitGameplay" text="Exit">
-               <HBox.margin>
-                  <Insets right="10.0" />
-               </HBox.margin>
-            </Button>
-         </children>
-      </HBox>
-   </top>
-</BorderPane>
-</children>
+    </children>
 </VBox>
