--- a/src/main/resources/com/example/FACT/gameplay.fxml
+++ b/src/main/resources/com/example/FACT/gameplay.fxml
@@ -18,7 +18,7 @@
 
 <!-- When UI loads, the FXML is linked to the GamePlay Controller -->
 
-<BorderPane fx:id="root" prefHeight="553.0" prefWidth="880.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.FACT.controller.GameplayController">
+<BorderPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.FACT.controller.GameplayController" minWidth="0.0" minHeight="0.0" prefWidth="-1.0" prefHeight="-1.0" maxWidth="1.7976931348623157E308" maxHeight="1.7976931348623157E308">
     <!-- This holds the description of the shortcut and shortcut buttons required. -->
     <center>
         <VBox alignment="TOP_CENTER">
